[tool.poetry]
name = "repl_nix_dashboard"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.13.0"
dash-bootstrap-components = "^1.4.2"
pandas = "^2.1.0"
plotly = "^5.16.1"
Babel = "^2.12.1"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
